Fix for bug 10515, an error in keybinding logic